# MoDuRank

./: README.md
.github/workflows/: frontend-deploy.yml
backend/: .gitignore  openapi.json  pyproject.toml  serverless.yml
backend/lambdas/add_game_option/: __init__.py
backend/lambdas/get_me/: __init__.py
backend/lambdas/get_user_by_id/: __init__.py
backend/lambdas/init_room/: __init__.py
backend/lambdas/login/: __init__.py
backend/lambdas/post_game/: __init__.py
backend/lambdas/register_user/: __init__.py
backend/openapi/: __init__.py  __main__.py  models.py
backend/scripts/: format.sh  install_sls_plugin.sh
backend/shared/: __init__.py  authorizer.py  chzzk.py  dynamodb.py  json.py  logger.py  middleware.py  permission.py  security.py
backend/shared/parser/: __init__.py  components.py  params.py  params_functions.py  utils.py
frontend/: .env  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/api/: user.ts
frontend/src/constants/: api.ts  nav.ts  query.ts  route_map.ts
frontend/src/hooks/: useUser.ts
frontend/src/layouts/MainLayout/: index.tsx
frontend/src/layouts/MainLayout/Header/: Drawer.tsx  Logo.tsx  Navbar.tsx  index.tsx
frontend/src/pages/: Test.tsx
frontend/src/types/: user.ts
